# super-q

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/actions/super-q/: action.yml
.github/workflows/: build-core.yml  docker-publish.yml  reusable-build.yml  reusable-release.yml
cloud/: AMI.md
cloud/terraform/: main.tf
docker/: Dockerfile  README.md  entrypoint.sh  install-quartus.sh  quartus-install.sh
docs/: ci.md  github-actions.md  iteration.md  modal-setup.md  remote.md
examples/: agent_example.md
examples/ci/: .gitlab-ci.yml
examples/pocket-core-ci/: .dockerignore  README.md
examples/pocket-core-ci/.github/workflows/: build.yml  release.yml
scripts/: bootstrap.sh  install-quartus.sh  pack_pocket.py  rbf_reverse.py
src/super_q/: __init__.py  __main__.py  artifacts.py  ci.py  cli.py  config.py  daemon.py  db.py  explore.py  gha.py  incremental.py  init.py  mcp_server.py  modal_app.py  pack.py  pool_config.py  progress.py  project.py  quartus.py  scheduler.py  seeds.py  timing.py  warm_shell.py  watch.py  worker.py
src/super_q/_resources/: install_quartus.sh
src/super_q/backends/: __init__.py  aws.py  base.py  docker.py  fly.py  gha.py  local.py  modal.py  ssh.py
tcl/: build_seed.tcl  common.tcl  fit_from_qdb.tcl  incremental_build.tcl  synth_only.tcl  timing_report.tcl  warm_shell.tcl
tests/: test_artifacts.py  test_db.py  test_db_concurrent.py  test_explore_ci.py  test_gha.py  test_init.py  test_init_inline.py  test_pack.py  test_project.py  test_seeds.py  test_timing.py  test_workflows_parse.py
