[project]
name = "super-q"
version = "0.1.0"
description = "Ultra-fast distributed Quartus build system for Analogue Pocket cores"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "super-q" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "anyio>=4.4",
    "platformdirs>=4.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Remote backends (install only what you use):
modal  = ["modal>=0.64"]
fly    = ["httpx>=0.27", "boto3>=1.34"]      # Tigris/R2/S3 for artifacts
ssh    = []                                    # only needs ssh+rsync on PATH
gha    = ["httpx>=0.27", "boto3>=1.34"]      # bucket for input sandbox
aws    = ["boto3>=1.34"]                       # legacy; Modal/Fly preferred
docker = ["docker>=7.1"]

# Iteration features:
watch = ["watchfiles>=0.22"]
mcp   = ["mcp>=1.0"]

# Everything:
all = [
    "modal>=0.64", "httpx>=0.27", "boto3>=1.34",
    "watchfiles>=0.22", "mcp>=1.0", "docker>=7.1",
]

[project.scripts]
superq = "super_q.cli:app"
super-q = "super_q.cli:app"
super-q-worker = "super_q.worker:main"
super-q-mcp = "super_q.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/super_q"]

# Ship the shell helpers + TCL wrappers alongside the Python code so
# pip-installed super-q has everything it needs without touching GitHub.
[tool.hatch.build.targets.wheel.force-include]
"tcl" = "super_q/tcl"
"docker/install-quartus.sh" = "super_q/_resources/install_quartus.sh"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PIE"]
# E501: line length (we trust ourselves)
# B008: Typer/Click pattern — defaults ARE the call; rewriting is worse.
# UP037: quoted forward refs are fine; we use them deliberately.
# SIM108: ternary vs if/else is style; let humans choose.
ignore = ["E501", "B008", "UP037", "SIM108"]
